fix overflow for mobile

--- a/src/components/SectionThree/SectionThree.css
+++ b/src/components/SectionThree/SectionThree.css
@@ -146,6 +146,10 @@ img {
     padding-bottom: 65px;
   }
 
+  .text-float {
+    display: none;
+  }
+
   .col {
     max-width: 100%;
     flex-basis: 100%;
